# tri-boost

./: .gitignore  AIM.md  COMPETITIVE-GOALS.md  CONTRIBUTING.md  Cargo.toml  deny.toml  pyproject.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  fuzz.yml  release-gate.yml
benchmarks/: GOAL-LOG.md  README.md  fair_compare.py  french_mtpl.py  lever_sweep.py  tabarena_suite.py
crates/tri-boost-core/: Cargo.toml
crates/tri-boost-core/benches/: reproducibility.rs
crates/tri-boost-core/src/: backend.rs  boosters.rs  cat.rs  cell_refit.rs  constraints.rs  data.rs  engine.rs  error.rs  explain.rs  lib.rs  loss.rs  scoring.rs  serialize.rs  simd.rs
crates/tri-boost-core/src/data/: bin.rs  exposure.rs  grid.rs  mod.rs
crates/tri-boost-core/src/engine/: boost.rs  hist.rs  mod.rs  split.rs
crates/tri-boost-core/tests/: binning_determinism.rs  binning_proptest.rs  categorical_explain.rs  determinism.rs  invariants_gate.rs  objective_invariants.rs  overflow_trap.rs  serde_version.rs
crates/tri-boost-py/: Cargo.toml
crates/tri-boost-py/src/: lib.rs
design/: 01-brainstorm.md  02-predictiveness-gap-closing.md  03-methodology-review.md  04-architecture-exploits.md
design/architecture-exploits/: README.md  explore-algebra-hadamard.md  explore-inference-microarch.md  explore-memory-compilation.md  explore-training-speed.md  filter.md
design/brainstorm-panel/: 1-lens-predictiveness-maximalist.md  2-lens-explainability-purist.md  3-lens-insurance-actuary.md  4-lens-algorithm-architect.md  5-lens-contrarian-risk-auditor.md  6-tension-audit.md  7-completeness-gaps.md  README.md
design/gap-closing-analysis/: README.md  closability.md  frontier.md  hp-ensemble.md
design/methodology-review/: README.md  defense.md  redteam-architecture.md  redteam-decomposability-fidelity.md  redteam-learning-framework.md  redteam-predictiveness.md  redteam-speed.md  redteam-tree-structure.md
docs/: README.md  release-gate.md  score-in-sql.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_binning.rs  fuzz_deserialize.rs
plan/: README.md
plan/areas/: 00-foundation.md  01-test-through-line.md  02-m1-greenspine.md  03-m2-objectives-constraints.md  04-m3-categoricals-data-schema.md  05-m4-predictiveness.md  06-m5-python-inference-perf.md  07-m6-benchmark-gate.md  README.md  critique.md
python/tests/: test_sklearn.py
python/tri_boost/: __init__.py  _tri_boost.pyi  sklearn.py
research/: 01-oblivious-symmetric-trees.md  02-histogram-gbm-internals.md  03-fanova-purification-explainability.md  04-pricing-objectives-actuarial.md  05-rust-python-engineering.md  README.md
research/06-techniques/: 1-speed-systems-inference.md  2-accuracy-model-class.md  3-categorical-feature-handling.md  4-constraints-structure.md  5-losses-sampling-objectives.md  6-uncertainty-distributional.md  7-interpretability-calibration.md  8-gaps-and-frontier.md  README.md
spec/: 00-spec-skeleton.md  01-overview-goals-invariants-milestone.md  02-architecture.md  03-data-model-and-binning.md  04-categorical-handling.md  05-objectives-loss-trait.md  06-oblivious-boosting-engine.md  07-interaction-selection-and-constraints.md  08-explainability-engine.md  09-predictiveness-boosters.md  10-inference-serialization.md  11-performance-engineering.md  12-python-api-interop.md  13-testing-quality-engineering.md  14-roadmap-and-build-order.md  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
