# Python packaging for tri-boost (spec §02.2 / §12). maturin "separated" layout:
# the Rust extension is built from crates/tri-boost-py and merged with the pure-Python
# sklearn wrappers under python/tri_boost/. Phase-0 skeleton — the estimators land
# with §12.
[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tri-boost"
description = "A depth-3 oblivious GBM that is exactly decomposable into ≤3rd-order fANOVA tables."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
# numpy is the ONLY hard runtime dependency — it is the array-interchange type at the
# Rust FFI boundary. All computation lives in the Rust core; Python is a thin orchestrator.
dependencies = [
  "numpy>=1.23",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.optional-dependencies]
# scikit-learn is OPT-IN: the TriBoostRegressor/Classifier estimators must literally be
# sklearn objects (the `__sklearn_tags__` contract) to drop into Pipeline/GridSearchCV/
# cross_val_score, so they require sklearn present — but the raw _Booster/_Model API does
# not, so we don't force scikit-learn (+scipy/joblib) onto the core install path.
sklearn = ["scikit-learn>=1.2"]
# Benchmark / dev tooling: data wrangling for the §13 accuracy benchmarks
# (e.g. French MTPL frequency/severity). Rival GBMs are installed explicitly in
# local dev environments so they never appear in shipped wheel metadata.
bench = [
  "scikit-learn>=1.2",
  "pandas>=1.5",
  "pyarrow>=10.0",
]

[tool.maturin]
# Separated layout: pure-Python sources here, the compiled module built from the py crate.
python-source = "python"
module-name = "tri_boost._tri_boost"
manifest-path = "crates/tri-boost-py/Cargo.toml"
# abi3 → one wheel per platform, not per interpreter.
features = ["pyo3/extension-module"]

# The §12.8 stub/lint gate: `mypy --strict` over the typed package + stubtest against
# the compiled module (run in CI's `python` job).
[tool.mypy]
python_version = "3.10"
strict = true

# scikit-learn ships no `py.typed` marker, so its base classes/mixins resolve to `Any`.
# Importing it stays dynamically typed; the three `BaseEstimator`/mixin subclasses carry a
# targeted `# type: ignore[misc]` for the unavoidable subclass-of-`Any` under `--strict`.
[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
