[package]
name = "tri-boost-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
tri-boost-core = { path = "../crates/tri-boost-core" }

[[bin]]
name = "fuzz_deserialize"
path = "fuzz_targets/fuzz_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_binning"
path = "fuzz_targets/fuzz_binning.rs"
test = false
doc = false
bench = false
