[package]
name = "tri-boost-py"
description = "PyO3 bindings for tri-boost (builds as a Python extension via maturin; not published to crates.io)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# Inherit the normal no-panic/missing-docs lint wall. `unsafe_code = "forbid"`
# is deliberately not in the workspace table, so this PyO3 crate can allow the
# generated binding unsafe locally while still sharing the rest of the gates.
[lints]
workspace = true

[lib]
name       = "_tri_boost"          # the compiled module is `tri_boost._tri_boost` (§02.7)
crate-type = ["cdylib"]

[dependencies]
tri-boost-core = { path = "../tri-boost-core", version = "0.1.0" }
pyo3  = { workspace = true, features = ["extension-module", "abi3-py310"] }
numpy = { workspace = true }
